ng/flux/apps/paperless/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
spec:
  endpointSelector:
    matchLabels:
      app: paperless
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: paperless
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
  - fromEntities:
    - host
    - remote-node
    - health
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: paperless
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "10443"
        protocol: TCP
      - port: "10080"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
